Initial Windows Hello support.